# rules_k8s-typescript-resolver

./: BUILD.bazel  README.md  WORKSPACE  package.json  resolver.ts  tsconfig.json
